--- a/invoice.html
+++ b/invoice.html
@@ -5,9 +5,7 @@
 		<title>Invoice</title>
 		<link rel="stylesheet" href="style.css">
 		<link rel="license" href="https://www.opensource.org/licenses/mit-license/">
-        <script src="../rubis/js/vendor/jquery-1.12.4.min.js"></script>
-        <script src="jspdf.debug.js"></script>
-        <script src="from_html.js"></script>
+        <script src="jquery-1.12.4.min.js"></script>
 		<script src="script.js"></script>
 	</head>
 	<body>
